Config::Objective 0.7 - 3/4/03
---------------------

- fixed documentation typos
- fixed Config::Objective::DataType->new() to accept a default value for
  the object
- allow backslash-escaped quotes inside of quoted strings
- improved error reporting

-------------------------------------------------------------------------------

Config::Objective 0.6 - 1/30/03
---------------------

- updated README file
- minor documentation cleanups
- added boolean '!' operator to expression syntax
- cleaned up config grammar
- require parens around conditional expressions
- improved error reporting
- split Config::Objective::DataType into multiple modules w/full documentation

-------------------------------------------------------------------------------

Config::Objective 0.5 - 1/18/03
---------------------

- renamed Config::Structured to Config::Objective
- finished man page

-------------------------------------------------------------------------------

Config::Structured 0.4 - 11/25/02
----------------------

- accept "true", "false", 1, and 0 as values for boolean variables
- don't process %include directives inside false conditionals
- fixed grammar bug in conditional parsing
- improved error reporting
- added "%elif" conditional directive
- fixed parser to detect unterminated "%if" block
- added support for parenthesis and boolean '&&' and '||' operators
  in conditional expression syntax

-------------------------------------------------------------------------------

Config::Structured 0.3 - 10/31/02
----------------------

- minor code cleanup
- fixed bug in Config::Structured::Hash class when using list values
- added var_obj() method

-------------------------------------------------------------------------------

Config::Structured 0.2 - 10/2/02
----------------------

- use Parse::Lex and Parse::Yapp instead of Parse::RecDescent
- fixed Makefile.PL to create man page
- fixed Config::Structured::Hash to handle appending data to list and
  hash values