@@ -18,6 +18,26 @@
 
 %{
 use strict;
+
+###
+### constants for conditional evaluation state
+###
+
+### either we already found a true condition, or the parent conditional
+### block is not being evaluated, so:
+###  1. subsequent %else or %elif clauses are NOT evaluated
+###  2. enclosed statements are NOT evaluated
+use constant CS_NO_EVAL		=> -1;
+
+### have not yet found a true conditional in this block, which means:
+###  1. subsequent %else or %elif clauses are evaluated
+###  2. enclosed statements are NOT evaluated
+use constant CS_FALSE		=> 0;
+
+### immediately preceding condition was true, so:
+###  1. subsequent %else or %elif clauses are NOT evaluated
+###  2. enclosed statements are evaluated
+use constant CS_TRUE		=> 1;
 %}
 
 
@@ -47,7 +67,7 @@ include	: INCLUDE string
 
 		return undef
 			if (@{$config->{'cond_stack'}}
-			    && $config->{'cond_stack'}->[-1] != 1);
+			    && $config->{'cond_stack'}->[-1] != CS_TRUE);
 
 		$_[2] = $config->{'include_dir'} . '/' . $_[2]
 			if ($_[2] !~ m|^/|);
@@ -99,7 +119,13 @@ cond_if	: IF PAREN_START expression PAREN_END
 	{
 		my ($config) = $_[0]->YYData->{'config'};
 
-		push(@{$config->{'cond_stack'}}, $_[3] ? 1 : 0);
+		push(@{$config->{'cond_stack'}},
+		     ((@{$config->{'cond_stack'}}
+		       && $config->{'cond_stack'}->[-1] != CS_TRUE)
+		      ? CS_NO_EVAL
+		      : ($_[3]
+			 ? CS_TRUE
+			 : CS_FALSE)));
 	}
 	;
 
@@ -123,20 +149,22 @@ cond_elif
 		die "%elif: not in conditional\n"
 			if (! @{$config->{'cond_stack'}});
 
-		### all previous options were false, so evaluate the
-		### specified conditional expression
-		if ($config->{'cond_stack'}->[-1] == 0)
+		### all previous conditions were false, so evaluate this one
+		if ($config->{'cond_stack'}->[-1] == CS_FALSE)
 		{
-			$config->{'cond_stack'}->[-1] = ($_[3] ? 1 : 0);
+			$config->{'cond_stack'}->[-1] = ($_[3]
+							 ? CS_TRUE
+							 : CS_FALSE);
 		}
 
-		### the last option was true, so set to -1
-		elsif ($config->{'cond_stack'}->[-1] == 1)
+		### the last condition was true, so all subsequent %else
+		### or %elif clauses must be false
+		elsif ($config->{'cond_stack'}->[-1] == CS_TRUE)
 		{
-			$config->{'cond_stack'}->[-1] = -1;
+			$config->{'cond_stack'}->[-1] = CS_NO_EVAL;
 		}
 
-		### if it's -1, leave it alone
+		### if it's CS_NO_EVAL, leave it alone
 	}
 	;
 
@@ -148,19 +176,19 @@ cond_else
 		die '%else: not in conditional'
 			if (! @{$config->{'cond_stack'}});
 
-		### all previous options were false, so set to true
-		if ($config->{'cond_stack'}->[-1] == 0)
+		### all previous conditions were false, so set to true
+		if ($config->{'cond_stack'}->[-1] == CS_FALSE)
 		{
-			$config->{'cond_stack'}->[-1] = 1;
+			$config->{'cond_stack'}->[-1] = CS_TRUE;
 		}
 
-		### the last option was true, so set to -1
-		elsif ($config->{'cond_stack'}->[-1] == 1)
+		### the last condition was true, so set to CS_NO_EVAL
+		elsif ($config->{'cond_stack'}->[-1] == CS_TRUE)
 		{
-			$config->{'cond_stack'}->[-1] = -1;
+			$config->{'cond_stack'}->[-1] = CS_NO_EVAL;
 		}
 
-		### if it's -1, leave it alone
+		### if it's CS_NO_EVAL, leave it alone
 	}
 	;
 
@@ -204,16 +232,18 @@ method_call
 
 #		print "var='$_[1]' method='$_[2]' value='$_[3]'\n";
 
-		### don't bother evaluating if a previous condition was true
+		### for conditional expressions, don't bother evaluating
+		### if a previous condition was true
 		return undef
 			if ($config->{'in_expr'}
-			    && $config->{'cond_stack'}->[-1] == -1);
+			    && $config->{'cond_stack'}->[-1] == CS_NO_EVAL);
 
-		### don't evaluate if we're inside a false conditional block
+		### for statements, don't evaluate if we're inside a
+		### false conditional block
 		return undef
 			if (! $config->{'in_expr'}
 			    && @{$config->{'cond_stack'}}
-			    && $config->{'cond_stack'}->[-1] != 1);
+			    && $config->{'cond_stack'}->[-1] != CS_TRUE);
 
 		return $config->_call_obj_method($_[1], $_[2], $_[3]);
 	}
