@@ -25,7 +25,7 @@ use Config::Objective::DataType;
 use Config::Objective::Parser;
 
 
-our $VERSION = '0.7';
+our $VERSION = '0.8';
 our $AUTOLOAD;
 
 
