@@ -190,3 +190,18 @@ table->replace		[ 2, bar, 0, UNrow ];
 table->modify		[ 2, bar, 0, again ];
 
 
+###############################################################################
+###  conditional tests
+###############################################################################
+
+i1		1;
+i2		2;
+
+%if ( i1 10 )
+i1		20;
+% if ( i2 2 )
+i2->incr;
+% endif
+%endif
+
+
